--- a/highlights/fxcss/DevelNext-Bright.css
+++ b/highlights/fxcss/DevelNext-Bright.css
@@ -1,67 +1,64 @@
 .syntax-text-area {
-    -fx-background-color: #202020;
-    -fx-background-fill: #404E51;
+    -fx-background-color: #fffdf5;
+    -fx-background-fill: #fdffe6;
     -fx-cursor: text;
 }
 
 .syntax-text-area .paragraph-box:has-caret {
-    -fx-background-color: #343f41;
+    -fx-background-color: #fcfad9;
 }
 
 .syntax-text-area .text {
-    -fx-fill: #E0E2E4;
+    -fx-fill: #333334;
+}
+
+.syntax-text-area .gutter .lineno {
+    -fx-text-fill: #8c8c8c;
+    -fx-fill: #8c8c8c;
+    -fx-background-fill: #8c8c8c;
 }
 
 .syntax-text-area .gutter {
-    -fx-border-color: #939393;
-    -fx-background-color: #545454;
+    -fx-border-color: white;
+    -fx-background-color: #ececec;
     -fx-border-width: 0 1px 0 0;
     -fx-padding: 0 3 0 3;
 }
 
-.styled-text-area .caret {
-    -fx-stroke: white;
+.syntax-text-area .caret {
+    -fx-stroke: #2f2f2f;
 }
 
-.styled-text-area .text.semicolon {
+.syntax-text-area .text.control, .syntax-text-area .text.operator, .syntax-text-area .text.semicolon {
+    -fx-fill: #c21c18;
+}
+
+.syntax-text-area .text.comment {
+    -fx-fill: #9e9e9e;
+    -fx-font-style: italic;
+}
+
+.syntax-text-area .text.keyword, .syntax-text-area .text.selector {
+    -fx-fill: #385192;
     -fx-font-weight: bold;
-}
-
-.styled-text-area .text.control {
-    -fx-fill: #6A8088;
-    -fx-background-color: #6b8189;
-    -fx-font-weight: bold;
-}
-
-.styled-text-area .text.comment {
-    -fx-fill: #939393;
-}
-
-.styled-text-area .text.selector {
-    -fx-fill: #cda869;
-    -fx-font-weight: bold;
-}
-
-.styled-text-area .text.keyword {
-    -fx-fill: #678CB1;
-}
-
-.styled-text-area .text.attribute {
-    -fx-fill: #aab8dd;
 }
 
 .styled-text-area .text.pseudo-class {
-    -fx-fill: #EC7600;
+    -fx-fill: #6994dc;
 }
 
-.styled-text-area .text.color {
-    -fx-fill: #FFCD22;
-}
-
-.syntax-text-area .text.number {
-    -fx-fill: #FFCD22;
+.styled-text-area .text.attribute {
+    -fx-fill: #238125;
 }
 
 .syntax-text-area .text.string {
-    -fx-fill: #afc9a0;
+    -fx-fill: #7f5b2f;
+}
+
+.styled-text-area .text.color {
+    -fx-fill: #324aff;
+}
+
+.syntax-text-area .text.number {
+    -fx-fill: #324aff;
 }
